[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/character/PlayerDetectionZone.gd" type="Script" id=1]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, -540, -311.4, 540, -311.4 )

[node name="VisualDetectionZone" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RememberTimer" type="Timer" parent="."]
wait_time = 300.0
[connection signal="body_entered" from="." to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="RememberTimer" to="." method="_on_RememberTimer_timeout"]
